--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="decoration-element" aria-hidden="true">REC</div>
+      <div class="decoration-element" aria-hidden="true"></div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -55,6 +55,7 @@
       <section class="content__section">
         <h3 class="content__section-title">Почему сосредоточиться так сложно</h3>
         <div class="content__section-article">
+          <article>
             <h4 class="content__section-subtitle title-decor">Многозадачность</h4>
             <p class="content__section-text">Особенно сложно сосредоточиться, 
               когда задач много и все они — важные. 
@@ -69,6 +70,8 @@
               и адреналин — «гормоны стресса». 
               Из-за этого мы работаем невнимательно: 
               ошибаемся и быстро устаём.</p>
+            </article>
+            <article>  
             <h4 class="content__section-subtitle title-decor">Дофамин</h4>
             <p class="content__section-text">С гормонами стресса всё понятно, 
               но дальше — ещё интереснее. 
@@ -82,6 +85,7 @@
               — и мы чувствуем удовольствие. 
               Получается замкнутый круг: чем больше отвлекаешься, 
               тем больше удовольствия получаешь.</p>
+            </article>  
         </div>
       </section>
       <section class="content__section content__section-special">
@@ -118,37 +122,47 @@
         <h3 class="content__section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h3>
         <div class="content__section-article">
             <h4 class="content__section-subtitle title-decor">5 простых (на самом деле не очень) советов</h4>
-            <h5 class="content__section-subtitle-small title-decor">Представьте небо и облака</h5>
-            <p class="content__section-text">Или листья в ручье. Тут дело в лёгкой медитации, 
+            <article>
+              <h5 class="content__section-subtitle-small title-decor">Представьте небо и облака</h5>
+              <p class="content__section-text">Или листья в ручье. Тут дело в лёгкой медитации, 
               которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах 
               как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза 
               и представить, что чистое небо — это вы, а облака — тревожные мысли. 
               И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, 
               и никуда не денется. Это упражнение поможет вернуться в настоящий момент, 
               а не волноваться о потенциальных проблемах из будущего.</p>
-            <h5 class="content__section-subtitle-small title-decor">Включите музыку</h5>
-            <p class="content__section-text">Но не любую, и не любимую. Любимая может быть связана 
+            </article>  
+            <article>
+              <h5 class="content__section-subtitle-small title-decor">Включите музыку</h5>
+              <p class="content__section-text">Но не любую, и не любимую. Любимая может быть связана 
               с сильными положительными эмоциями, которые тоже очень сильно отвлекают. 
               Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать 
               включить плейлист с «белым шумом» или нейромузыкой.</p>
-            <h5 class="content__section-subtitle-small title-decor">Прогуляйтесь</h5>
-            <p class="content__section-text">Или даже пробегитесь. Лучше найти парк или лес: 
+            </article>
+            <article> 
+              <h5 class="content__section-subtitle-small title-decor">Прогуляйтесь</h5>
+              <p class="content__section-text">Или даже пробегитесь. Лучше найти парк или лес: 
               один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank" class="content__section-link">показал</a>, 
               что созерцание природы повышает концентрацию, 
               в то время как после просмотра городских пейзажей она наоборот понижается. 
               Можно совместить прогулку с физическими упражнениями или бегом 
               — так в мозг поступит ещё больше кислорода и он будет лучше работать. 
               Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
-            <h5 class="content__section-subtitle-small title-decor">Хорошо ешьте</h5>
-            <p class="content__section-text">Мы — не ваша бабушка, но это правда важно. 
+            </article>
+            <article>
+              <h5 class="content__section-subtitle-small title-decor">Хорошо ешьте</h5>
+              <p class="content__section-text">Мы — не ваша бабушка, но это правда важно. 
               Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. 
               Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), 
               коричневый рис, хлеб из цельнозерновой пшеницы.</p>
-            <h5 class="content__section-subtitle-small title-decor">Читайте</h5>
-            <p class="content__section-text">Настоящие бумажные книги. Это правда помогает с концентрацией:
+            </article>
+            <article>
+              <h5 class="content__section-subtitle-small title-decor">Читайте</h5>
+              <p class="content__section-text">Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. 
               А вот интересная книга способна затянуть и на несколько часов 
               и круто тренирует направленное внимание.</p>
+            </article>
         </div>
       </section>
       <section class="gallery">
