--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
         </ul>
       </nav>
       <h1 class="header__accent-title">no focus</h1>
-      <h3 class="title title-decor">
+      <p class="header__text text-decor">
         Что делать, когда не можешь делать ничего<br>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-      </h3>
+      </p>
     </header>
     <main class="content">
       <section class="content__section">
         <h3 class="content__section-title">Почему сосредоточиться так сложно</h3>
         <div class="content__section-article">
           <article>
-            <h4 class="content__section-subtitle title-decor">Многозадачность</h4>
+            <h4 class="content__section-subtitle text-decor">Многозадачность</h4>
             <p class="content__section-text">Особенно сложно сосредоточиться, 
               когда задач много и все они — важные. 
               Где же легендарная многозадачность, 
@@ -70,9 +70,9 @@
               и адреналин — «гормоны стресса». 
               Из-за этого мы работаем невнимательно: 
               ошибаемся и быстро устаём.</p>
-            </article>
-            <article>  
-            <h4 class="content__section-subtitle title-decor">Дофамин</h4>
+          </article>
+          <article>  
+            <h4 class="content__section-subtitle text-decor">Дофамин</h4>
             <p class="content__section-text">С гормонами стресса всё понятно, 
               но дальше — ещё интереснее. 
               В нашей невозможности сосредоточиться 
@@ -92,7 +92,7 @@
         <h3 class="content__section-title">Что снижает концентрацию внимания?</h3>
         <div class="content__section-article">
           <article>
-            <h4 class="content__section-subtitle title-decor">Многозадачность</h4>
+            <h4 class="content__section-subtitle text-decor">Многозадачность</h4>
             <p class="content__section-text">Как концентрация может снижаться из-за… 
               концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) 
               заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. 
@@ -100,7 +100,7 @@
               Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
           </article>
           <article>
-            <h4 class="content__section-subtitle title-decor">Еда</h4>
+            <h4 class="content__section-subtitle text-decor">Еда</h4>
             <p class="content__section-text">«Быстрые углеводы» — сахар, белый хлеб, 
               сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. 
               Но уходит эта энергия также быстро, как и приходит. А мы в результате 
@@ -108,7 +108,7 @@
               мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
           </article>
           <article>
-            <h4 class="content__section-subtitle title-decor">Гаджеты</h4>
+            <h4 class="content__section-subtitle text-decor">Гаджеты</h4>
             <p class="content__section-text">Да-да, это та самая ситуация, 
               когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео 
               с забавными утятами. В результате мозг пытается переключиться с одной задачи 
@@ -121,9 +121,9 @@
       <section class="content__section">
         <h3 class="content__section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h3>
         <div class="content__section-article">
-            <h4 class="content__section-subtitle title-decor">5 простых (на самом деле не очень) советов</h4>
+            <h4 class="content__section-subtitle text-decor">5 простых (на самом деле не очень) советов</h4>
             <article>
-              <h5 class="content__section-subtitle-small title-decor">Представьте небо и облака</h5>
+              <h5 class="content__section-subtitle-small text-decor">Представьте небо и облака</h5>
               <p class="content__section-text">Или листья в ручье. Тут дело в лёгкой медитации, 
               которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах 
               как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза 
@@ -133,14 +133,14 @@
               а не волноваться о потенциальных проблемах из будущего.</p>
             </article>  
             <article>
-              <h5 class="content__section-subtitle-small title-decor">Включите музыку</h5>
+              <h5 class="content__section-subtitle-small text-decor">Включите музыку</h5>
               <p class="content__section-text">Но не любую, и не любимую. Любимая может быть связана 
               с сильными положительными эмоциями, которые тоже очень сильно отвлекают. 
               Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать 
               включить плейлист с «белым шумом» или нейромузыкой.</p>
             </article>
             <article> 
-              <h5 class="content__section-subtitle-small title-decor">Прогуляйтесь</h5>
+              <h5 class="content__section-subtitle-small text-decor">Прогуляйтесь</h5>
               <p class="content__section-text">Или даже пробегитесь. Лучше найти парк или лес: 
               один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank" class="content__section-link">показал</a>, 
               что созерцание природы повышает концентрацию, 
@@ -150,14 +150,14 @@
               Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
             </article>
             <article>
-              <h5 class="content__section-subtitle-small title-decor">Хорошо ешьте</h5>
+              <h5 class="content__section-subtitle-small text-decor">Хорошо ешьте</h5>
               <p class="content__section-text">Мы — не ваша бабушка, но это правда важно. 
               Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. 
               Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), 
               коричневый рис, хлеб из цельнозерновой пшеницы.</p>
             </article>
             <article>
-              <h5 class="content__section-subtitle-small title-decor">Читайте</h5>
+              <h5 class="content__section-subtitle-small text-decor">Читайте</h5>
               <p class="content__section-text">Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. 
               А вот интересная книга способна затянуть и на несколько часов 
@@ -166,22 +166,22 @@
         </div>
       </section>
       <section class="gallery">
-        <h4 class="content__section-subtitle title-decor">А можно в картинках?</h4>
+        <h4 class="content__section-subtitle text-decor">А можно в картинках?</h4>
         <ul class="gallery__list">
           <li class="gallery__item">
-            <img src="../images/sunset.png" alt="Логотип: Рассвет в горах" class="gallery__image" loading="lazy">
+            <img src="./images/sunset.png" alt="Логотип: Рассвет в горах" class="gallery__image" loading="lazy">
           </li>
           <li class="gallery__item">
-            <img src="../images/ice-cream.png" alt="Мороженое" class="gallery__image" loading="lazy">
+            <img src="./images/ice-cream.png" alt="Мороженое" class="gallery__image" loading="lazy">
           </li>
           <li class="gallery__item">
-            <img src="../images/tape.png" alt="Аудиокассета" class="gallery__image" loading="lazy">
+            <img src="./images/tape.png" alt="Аудиокассета" class="gallery__image" loading="lazy">
           </li>
           <li class="gallery__item">
-            <img src="../images/books.png" alt="Книги" class="gallery__image" loading="lazy">
+            <img src="./images/books.png" alt="Книги" class="gallery__image" loading="lazy">
           </li>
           <li class="gallery__item">
-            <img src="../images/street.png" alt="Городская улица" class="gallery__image" loading="lazy">
+            <img src="./images/street.png" alt="Городская улица" class="gallery__image" loading="lazy">
           </li>
         </ul>
       </section>
